# ITMO_IS-2-sem-CPP-Programming-Laboratory_works

./: README.md
laboratory work 1/part 1/: A.cpp  B.cpp
laboratory work 1/part 2/: polynomial.cpp  polynomial.hpp
laboratory work 2/code/: CMakeLists.txt  currencies  curstats.cpp  curstats.hpp  easyrequest.cpp  easyrequest.hpp  main.cpp
laboratory work 3/part 1/: cb.cpp
laboratory work 3/part 2/: check.cpp  useralgo.hpp
laboratory work 4/code/: CMakeLists.txt  main.cpp  rubikcube.cpp  rubikcube.hpp
laboratory work 5/code/: CMakeLists.txt  main.cpp  poolallocator.hpp
laboratory work 6/code/: CMakeLists.txt  metafuctions.hpp  polynom_test.cc
